# peque

./: Cargo.toml
src/: main.rs
templates/: index.html.tera
