[package]
name = "peque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "2.0.2"
#eyra = "0.15.3"
html_parser = "0.7.0"
libflate = "2.1.0"
rocket = "=0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
